skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_overview__overview_stale_chip_stale.snap
---
source: tests/snapshot_overview.rs
expression: "common::render_model(&model)"
---
"┌ Flightdeck ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session demo-mixed  ·  Master pi at /repo/demo  ·  daemon: file-mode  ·  uptime 2h25m  ·  Adhoc 1 · Issue 1 · Workflow 1  ·  10m old · stale  $0.00 · 0 turns · in 0 / out 0     moon ▾ │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Activity │ Conversations │ Merges │ Decisions │ Costs │ Daemon                                                                                                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ left rail ───────────────┐┌ sessions (3 tracked) ────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ detail ──────────────────────────────────┐"
"│Status                    ││Kind    State            Harness    Title          Cost           PR / path      Age      Decision                Activity    ││Fix dashboard state reader                │"
"│▸ Needs input        1    ││ISS     Needs input      opencode   Fix dashboard… —              …#44 · vst-101 1h35m    cleanup-prompt          4m          ││VST-101  ·  Issue  ·  Needs input         │"
"│Submitting         1      ││WF      Submitting       codex      Build Rust da… —              —              58m      bash-permission-prompt  4m          ││substate: cleanup prompt                  │"
"│Running            1      ││AH      Running          pi         Watch daemon … —              —              2h10m    —                       4m          ││                                          │"
"│                          ││                                                                                                                              ││Where                                     │"
"│Merge queue               ││                                                                                                                              ││pane    %41                               │"
"│1. VST-101  Needs input   ││                                                                                                                              ││worktree                                  │"
"│2. VST-102  queued        ││                                                                                                                              ││/repo/worktrees/vst-101                   │"
"│                          ││                                                                                                                              ││cwd     /repo/worktrees/vst-101           │"
"│Conflicts                 ││                                                                                                                              ││                                          │"
"│• VST-101 ↔ VST-102       ││                                                                                                                              ││Issue                                     │"
"│                          ││                                                                                                                              ││PR #44                                    │"
"│                          ││                                                                                                                              ││scope declared=5 actual=7 (1.4x bigger    │"
"│                          ││                                                                                                                              ││than declared)                            │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Cost                                      │"
"│                          ││                                                                                                                              ││cost      — (no source)                   │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Recent decisions                          │"
"│                          ││                                                                                                                              ││• cleanup-prompt → NO — sibling worktree  │"
"│                          ││                                                                                                                              ││still live                                │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Actions                                   │"
"│                          ││                                                                                                                              ││[ Focus tmux window ]                     │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   f filters   n noise   s session   d decisions   e export   ? help   q quit                                                        noise: hidden  ·  filter: off"
"                                                                                                                                                                                                        "
